[package]
name = "lgbm-sys"
version = "0.0.1"
edition = "2024"
authors = ["frozenlib"]
license = "MIT"
readme = "../README.md"
repository = "https://github.com/frozenlib/lgbm-rs"
documentation = "https://docs.rs/lgbm-sys/"
keywords = ["lightgbm", "machine-learning", "gradient-boosting"]
categories = ["external-ffi-bindings"]
description = "Unofficial Rust bindings for LightGBM"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
