[package]
name = "lgbm"
version = "0.0.6"
edition = "2024"
authors = ["frozenlib"]
license = "MIT"
readme = "../README.md"
repository = "https://github.com/frozenlib/lgbm-rs"
documentation = "https://docs.rs/lgbm/"
keywords = ["lightgbm", "machine-learning", "gradient-boosting"]
categories = ["api-bindings"]
description = "Unofficial Rust bindings for LightGBM"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lgbm-sys = { version = "0.0.2", path = "../lgbm-sys" }
derive-ex = "0.1.8"
text-grid = "0.4.1"
parse-display = "0.10.0"
serde = { version = "1.0.219", features = ["derive"] }

[dev-dependencies]
anyhow = "1.0.97"
